--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -1,1 +1,18 @@
- 
+name: demo
+
+on:
+  push:
+    branches:
+      - main  # Trigger on push to the 'main' branch
+
+jobs:
+  hello:
+    runs-on: windows-latest  # Use a Windows runner
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3  # Step to checkout the repository code
+
+      - name: Echo Hello World
+        run: echo Hello World
+
+    
